src/views/snapshots/git_local_review__views__review_details_view__tests__review_details_view_render_with_diff_content.snap
---
source: src/views/review_details_view.rs
expression: render_app_to_terminal_backend(app)
---
"┌ Review Details ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│┌ Title ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││main (unknown) -> default (unknown)                                                                                                                         ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Diff (line 1/6, scroll 1/6) ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││@@ -1,3 +1,4 @@                                                                                                                                             ││"
"││ # Test Repository                                                                                                                                          ││"
"││+                                                                                                                                                           ││"
"││ This is a test file                                                                                                                                        ││"
"││-Old line to remove                                                                                                                                         ││"
"││+New line to add                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
