src/views/snapshots/git_local_review__views__review_details_view__tests__review_details_view_render_with_diff_error.snap
---
source: src/views/review_details_view.rs
expression: render_app_to_terminal_backend(app)
---
"┌ Review Details ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│┌ Title ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││feature (jkl0987) -> default (unknown)                                                                                                                      ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Files [ACTIVE] ──────────────┐┌ Diff Error ────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││                              ││Error: No diff files available                                                                                              ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"│└──────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
